# Mounting_Monitor

./: .env.template  .gitignore  README.md  SwineMonitor.spec  breeding_logs.db  config.yaml  config.yaml.template  database.py  detector.py  notification.py  pyproject.toml  requirements.txt  run.sh  verify_changes.py
docs/: ARCHITECTURE.md  BUILD_GUIDE.md  BUILD_MAC.md  DEVELOPER_GUIDE.md  SETUP_WINDOWS.md  WINDOWS_TEST_CHECKLIST.md
scripts/: build.spec  build_mac.sh  build_windows.bat
src/: __init__.py  app.py  database.py  detector.py  encryption.py  logger_config.py  main.py  notification.py  notification_scheduler.py  utils.py
src/gui/: __init__.py  history_window.py  login_window.py  main.py  main_window.py  settings_window.py  setup_wizard.py  video_thread.py
tests/: __init__.py  email_notifier_tool.py  smtp_connection_tool.py  test_daily_summary.py  test_database.py  test_detector.py  test_encryption.py  test_gui.py  test_notification.py  test_notification_scheduler.py
