[project]
name = "glowing-orbit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "pyqt6>=6.10.1",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "streamlit>=1.51.0",
    "ultralytics>=8.3.232",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.17.0",
]
